tests/NormalTests/paczka1/fuzzy1/46552813.err
Error in line 7: 3a7Vn A797 230,52
Error in line 5: 3a7Vn A797 963,3
Error in line 15: BUaYhJ A34 43,6
Error in line 11: 3a7Vn A34 8,5
Error in line 22: A34 S84 27,1
Error in line 23: A34 A34 41,1
